Expand project structure

--- a/src/PlayBall.GroupManagement.Business.Impl/PlayBall.GroupManagement.Business.Impl.csproj
+++ b/src/PlayBall.GroupManagement.Business.Impl/PlayBall.GroupManagement.Business.Impl.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\PlayBall.GroupManagement.Business\PlayBall.GroupManagement.Business.csproj" />
